@@ -6,8 +6,5 @@ from setuptools import setup
 execfile('setup.py',
          {'additional_params' :
           {'namespace_packages' : ['mpl_toolkits'],
-           'entry_points': {'nose.plugins':
-                            [
-    'KnownFailure =  matplotlib.testing.noseclasses:KnownFailure',
-    ]
-                            }}})
+           #'entry_points': {'nose.plugins':  ['KnownFailure =  matplotlib.testing.noseclasses:KnownFailure', ] }
+           }})
